--- a/App.xaml
+++ b/App.xaml
@@ -3,13 +3,37 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TheExpanseRPG"
              xmlns:custom="clr-namespace:TheExpanseRPG.CustomControls"
-    >
+        
+             >
     <Application.Resources>
 
         <ResourceDictionary>
             <SolidColorBrush x:Key="EXPLightBlueBrush" Color="#FF72FBFF"/>
             <SolidColorBrush x:Key="EXPDarkBlueBrush" Color="#FF0B5879"/>
             <SolidColorBrush x:Key="EXPDarkGreyBackGroundBrush" Color="#FF262626"/>
+            
+            <SolidColorBrush x:Key="ListBox.Disabled.Background" Color="#FFFFFFFF"/>
+            <SolidColorBrush x:Key="ListBox.Disabled.Border" Color="#FFD9D9D9"/>
+            
+            <!--<ControlTemplate x:Key="ExpanseListViewTemplate" TargetType="{x:Type ListBox}">
+                <Border x:Name="Bd" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Padding="1" SnapsToDevicePixels="true">
+                    <ScrollViewer Focusable="false" Padding="{TemplateBinding Padding}">
+                        <ItemsPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                    </ScrollViewer>
+                </Border>
+                <ControlTemplate.Triggers>
+                    <Trigger Property="IsEnabled" Value="false">
+                        <Setter Property="Background" TargetName="Bd" Value="Transparent"/>
+                    </Trigger>
+                    <MultiTrigger>
+                        <MultiTrigger.Conditions>
+                            <Condition Property="IsGrouping" Value="true"/>
+                            <Condition Property="VirtualizingPanel.IsVirtualizingWhenGrouping" Value="false"/>
+                        </MultiTrigger.Conditions>
+                        <Setter Property="ScrollViewer.CanContentScroll" Value="false"/>
+                    </MultiTrigger>
+                </ControlTemplate.Triggers>
+            </ControlTemplate>-->
             
             <Style TargetType="{x:Type Label}">
                 <Setter Property="Foreground" Value="{StaticResource EXPLightBlueBrush}"/>
@@ -30,7 +54,7 @@
                 <ResourceDictionary Source="/Themes/Generic.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
-            <!--<SolidColorBrush x:Key="EXPLightBlueBrush" Color="#FF72FBFF"/>-->
+
             
 
            
