--- a/Core/MVVM/View/AllRandomAttributeRollView.xaml
+++ b/Core/MVVM/View/AllRandomAttributeRollView.xaml
@@ -33,55 +33,55 @@
                 <custom:CutCorner Margin="0,5,0,0" HasShadow="0" BorderBrush="Black" Fill="Black" BorderThickness="0" BorderCuts="1,0,0,0" >
                     <Grid>
                         <Label Content="Accuracy" HorizontalAlignment="Center"/>
-                        <Label Content="{Binding AccuracyRoll}" Foreground="Gray" HorizontalAlignment="Right"/>
+                        <!--<Label Content="{Binding AccuracyRoll}" Foreground="Gray" HorizontalAlignment="Right"/>-->
                     </Grid>
                 </custom:CutCorner>
                 <custom:CutCorner Margin="0,5,0,0" HasShadow="0" BorderBrush="Black" Fill="Black" BorderThickness="0" BorderCuts="1,0,0,0" Grid.Row="1" >
                     <Grid>
                         <Label Content="Constitution" HorizontalAlignment="Center"/>
-                        <Label Content="{Binding ConstitutionRoll}" Foreground="Gray" HorizontalAlignment="Right"/>
+                        <!--<Label Content="{Binding ConstitutionRoll}" Foreground="Gray" HorizontalAlignment="Right"/>-->
                     </Grid>
                 </custom:CutCorner>
                 <custom:CutCorner Margin="0,5,0,0" HasShadow="0" BorderBrush="Black" Fill="Black" BorderThickness="0" BorderCuts="1,0,0,0" Grid.Row="2" >
                     <Grid>
                         <Label Content="Fighting" HorizontalAlignment="Center"/>
-                        <Label Content="{Binding FightingRoll}" Foreground="Gray" HorizontalAlignment="Right"/>
+                        <!--<Label Content="{Binding FightingRoll}" Foreground="Gray" HorizontalAlignment="Right"/>-->
                     </Grid>
                 </custom:CutCorner>
                 <custom:CutCorner Margin="0,5,0,0" HasShadow="0" BorderBrush="Black" Fill="Black" BorderThickness="0" BorderCuts="1,0,0,0" Grid.Row="3" >
                     <Grid>
                         <Label Content="Communication" HorizontalAlignment="Center"/>
-                        <Label Content="{Binding CommunicationRoll}" Foreground="Gray" HorizontalAlignment="Right"/>
+                        <!--<Label Content="{Binding CommunicationRoll}" Foreground="Gray" HorizontalAlignment="Right"/>-->
                     </Grid>
                 </custom:CutCorner>
                 <custom:CutCorner Margin="0,5,0,0" HasShadow="0" BorderBrush="Black" Fill="Black" BorderThickness="0" BorderCuts="1,0,0,0" Grid.Row="4" >
                     <Grid>
                         <Label Content="Dexterity" HorizontalAlignment="Center"/>
-                        <Label Content="{Binding DexterityRoll}" Foreground="Gray" HorizontalAlignment="Right"/>
+                        <!--<Label Content="{Binding DexterityRoll}" Foreground="Gray" HorizontalAlignment="Right"/>-->
                     </Grid>
                 </custom:CutCorner>
                 <custom:CutCorner Margin="0,5,0,0" HasShadow="0" BorderBrush="Black" Fill="Black" BorderThickness="0" BorderCuts="1,0,0,0" Grid.Row="5" >
                     <Grid>
                         <Label Content="Intelligence" HorizontalAlignment="Center"/>
-                        <Label Content="{Binding IntelligenceRoll}" Foreground="Gray" HorizontalAlignment="Right"/>
+                        <!--<Label Content="{Binding IntelligenceRoll}" Foreground="Gray" HorizontalAlignment="Right"/>-->
                     </Grid>
                 </custom:CutCorner>
                 <custom:CutCorner Margin="0,5,0,0" HasShadow="0" BorderBrush="Black" Fill="Black" BorderThickness="0" BorderCuts="1,0,0,0" Grid.Row="6" >
                     <Grid>
                         <Label Content="Perception" HorizontalAlignment="Center"/>
-                        <Label Content="{Binding PerceptionRoll}" Foreground="Gray" HorizontalAlignment="Right"/>
+                        <!--<Label Content="{Binding PerceptionRoll}" Foreground="Gray" HorizontalAlignment="Right"/>-->
                     </Grid>
                 </custom:CutCorner>
                 <custom:CutCorner Margin="0,5,0,0" HasShadow="0" BorderBrush="Black" Fill="Black" BorderThickness="0" BorderCuts="1,0,0,0" Grid.Row="7" >
                     <Grid>
                         <Label Content="Strength" HorizontalAlignment="Center"/>
-                        <Label Content="{Binding StrengthRoll}" Foreground="Gray" HorizontalAlignment="Right"/>
+                        <!--<Label Content="{Binding StrengthRoll}" Foreground="Gray" HorizontalAlignment="Right"/>-->
                     </Grid>
                 </custom:CutCorner>
                 <custom:CutCorner Margin="0,5,0,0" HasShadow="0" BorderBrush="Black" Fill="Black" BorderThickness="0" BorderCuts="1,0,0,0" Grid.Row="8" >
                     <Grid>
                         <Label Content="Willpower" HorizontalAlignment="Center"/>
-                        <Label Content="{Binding WillpowerRoll}" Foreground="Gray" HorizontalAlignment="Right"/>
+                        <!--<Label Content="{Binding WillpowerRoll}" Foreground="Gray" HorizontalAlignment="Right"/>-->
                     </Grid>
                 </custom:CutCorner>
 
