--- a/Core/MVVM/View/AttributeRollView.xaml
+++ b/Core/MVVM/View/AttributeRollView.xaml
@@ -7,6 +7,7 @@
              xmlns:enum="clr-namespace:TheExpanseRPG.Core.Enums"
              xmlns:converter="clr-namespace:TheExpanseRPG.Core.Converters"
              xmlns:custom="clr-namespace:TheExpanseRPG.CustomControls"
+             xmlns:user="clr-namespace:TheExpanseRPG.UserControls"
              xmlns:vm="clr-namespace:TheExpanseRPG.Core.MVVM.ViewModel"
              
              mc:Ignorable="d" 
@@ -20,10 +21,10 @@
 
 
         <ObjectDataProvider x:Key="RollTypeDataSource"
-          ObjectType="{x:Type enum:AttributeRollType}"
+          ObjectType="{x:Type enum:AbilityRollType}"
           MethodName="GetValues">
             <ObjectDataProvider.MethodParameters>
-                <x:Type TypeName="enum:AttributeRollType" />
+                <x:Type TypeName="enum:AbilityRollType" />
             </ObjectDataProvider.MethodParameters>
         </ObjectDataProvider>
 
@@ -38,15 +39,15 @@
 
     <Grid>
         <Grid.Resources>
-            <DataTemplate DataType="{x:Type vm:AllRandomAttributeRollViewModel}">
+            <DataTemplate DataType="{x:Type vm:AllRandomAbilityRollViewModel}">
                 <local:AllRandomAttributeRollView/>
             </DataTemplate>
             
-        <DataTemplate DataType="{x:Type vm:AssignAttributeRollViewModel}">
+        <DataTemplate DataType="{x:Type vm:AssignAbilityRollViewModel}">
             <local:AssignAttributeRollView/>
         </DataTemplate>
             
-        <DataTemplate DataType="{x:Type vm:DistributeAttributesViewModel}">
+        <DataTemplate DataType="{x:Type vm:DistributeAbilitiesViewModel}">
             <local:DistributeAttributesView/>
         </DataTemplate>
             
@@ -56,11 +57,10 @@
             <RowDefinition Height="auto"/>
             <RowDefinition />
         </Grid.RowDefinitions>
-        <!--<Grid.ColumnDefinitions>
+        <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>-->
+        </Grid.ColumnDefinitions>
 
         <ListBox SelectionMode="Single" 
                  ItemsSource="{Binding Source={StaticResource RollTypeDataSource}}"
@@ -71,7 +71,7 @@
                  HorizontalAlignment="Stretch"
                  HorizontalContentAlignment="Stretch"
                  Background="Transparent"
-                 SelectedItem="{Binding SelectedAttributeRollType}"
+                 SelectedItem="{Binding SelectedAbilityRollType}"
                  Margin="39,0,39,-3"
                  
                   >
@@ -136,5 +136,53 @@
         <ContentControl Grid.Row="1" Content="{Binding CurrentInnerViewModel}" Height="400" Background="Red">
         </ContentControl>
 
+        <Grid Grid.Column="3" Grid.RowSpan="2" Margin="0,0,39,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <user:AttributeDescriptionBox
+                HeaderContent="Accuracy"
+                Content="Measures aim and precision, and measures your ability to hit targets with ranged or thrown weapons." 
+                />
+            <user:AttributeDescriptionBox Grid.Column="1"
+                HeaderContent="Constitution"
+                Content="Your character’s overall health, fortitude, and resistance to harm, illness, and fatigue."
+    />
+            <user:AttributeDescriptionBox Grid.Column="2"
+                HeaderContent="Fighting"
+                Content="Your character’s capability and prowess in close combat, ranging from a brawl to wielding weapons."
+    />
+            <user:AttributeDescriptionBox Grid.Row="1" Grid.Column="0"
+                HeaderContent="Communication"
+                Content="Covers social skills and generally making friends and influencing people." 
+    />
+            <user:AttributeDescriptionBox Grid.Row="1" Grid.Column="1"
+                HeaderContent="Dexterity"
+                Content="Covers deftness, agility, and reaction time, affecting how quickly and gracefully you move."
+    />
+            <user:AttributeDescriptionBox Grid.Row="1" Grid.Column="2"
+                HeaderContent="Intelligence"
+                Content="Measures a character’s reasoning, memory, problemsolving, and overall knowledge."
+    />
+            <user:AttributeDescriptionBox Grid.Row="2" Grid.Column="0"
+                HeaderContent="Perception"
+                Content="The ability to pick up on and notice things using any of the character’s senses." 
+    />
+            <user:AttributeDescriptionBox Grid.Row="2" Grid.Column="1"
+                HeaderContent="Strength"
+                Content="Sheer musclepower and the ability to apply it, from lifting heavy things to feats of athletics."
+    />
+            <user:AttributeDescriptionBox Grid.Row="2" Grid.Column="2"
+                HeaderContent="Willpower"
+                Content="Measures self-control, self-discipline, mental fortitude, and confidence."
+    />
+        </Grid>
     </Grid>
 </UserControl>
