--- a/Core/MVVM/View/CharacterCreationWindow.xaml
+++ b/Core/MVVM/View/CharacterCreationWindow.xaml
@@ -11,15 +11,16 @@
         WindowStartupLocation="CenterScreen"
         MouseDown="Window_MouseDown"
         Style="{StaticResource ExpanseWindowStyle}"
-        Title="CharacterCreationWindow" Height="700" Width="650">
-    
+        Topmost="False"
+        Title="CharacterCreationWindow" Height="710" Width="1200">
+
     <Border BorderBrush="{StaticResource EXPDarkBlueBrush}" BorderThickness="3">
         <Grid>
             <Grid.Resources>
                 <DataTemplate DataType="{x:Type vm:OriginSelectViewModel}">
                     <local:OriginSelectView/>
                 </DataTemplate>
-                <DataTemplate DataType="{x:Type vm:AttributeRollViewModel}">
+                <DataTemplate DataType="{x:Type vm:AbilityRollViewModel}">
                     <local:AttributeRollView/>
                 </DataTemplate>
                 <DataTemplate DataType="{x:Type vm:SocialAndBackgroundViewModel}">
@@ -32,52 +33,60 @@
                     <local:DriveAndGoalsView/>
                 </DataTemplate>
             </Grid.Resources>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="200"/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="40"/>
-                <RowDefinition/>
+                <RowDefinition Height="40"/>
+                <RowDefinition />
+                <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
-            
+
             <usercontrols:WindowHeaderWithLogo Grid.ColumnSpan="10"/>
-            <StackPanel Grid.Row="1" HorizontalAlignment="Center">
-                <custom:CutCorner BorderCuts="0,1,0,0" >
-                    <Button Content="Origin" Command="{Binding NavigateToOriginSelect}"/>
+            <Border Grid.Row="2" BorderBrush="{StaticResource EXPDarkBlueBrush}" BorderThickness="0,3"/>
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <custom:CutCorner BorderCuts="1,0,0,1" Grid.Column="0" Margin="10">
+                    <RadioButton HorizontalContentAlignment="Center" GroupName="creationSteps" 
+                                 Style="{DynamicResource ExpanseToggleButton}" 
+                                 Content="Origin" Command="{Binding NavigateToOriginSelect}"
+                                 VerticalContentAlignment="Center"
+                                 BorderThickness="0"/>
                 </custom:CutCorner>
-                <Rectangle Height="30" Fill="{StaticResource EXPLightBlueBrush}" Width="5"/>
-                <custom:CutCorner BorderCuts="0,1,0,0" >
-                    <Button Content="Attributes" Command="{Binding NavigateToAttributeRoll}"/>
+                <custom:CutCorner BorderCuts="1,0,0,0" Grid.Column="1" Margin="10">
+                    <RadioButton BorderThickness="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" GroupName="creationSteps" Style="{DynamicResource ExpanseToggleButton}" Content="Attributes" Command="{Binding NavigateToAttributeRoll}"  />
                 </custom:CutCorner>
-                <Rectangle Height="30" Fill="{StaticResource EXPLightBlueBrush}" Width="5"/>
-                <custom:CutCorner BorderCuts="0,1,0,0" >
-                    <Button Content="Social Class and Background" Command="{Binding NavigateToSocialAndBackground}"/>
+                <custom:CutCorner BorderCuts="0,1,0,0" Grid.Column="2" Margin="10">
+                    <RadioButton BorderThickness="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" GroupName="creationSteps" Style="{DynamicResource ExpanseToggleButton}" Content="Social Class and Background" Command="{Binding NavigateToSocialAndBackground}"  />
                 </custom:CutCorner>
-                <Rectangle Height="30" Fill="{StaticResource EXPLightBlueBrush}" Width="5"/>
-                <custom:CutCorner BorderCuts="0,1,0,0" >
-                    <Button Content="Professions" Command="{Binding NavigateToCharacterProfessions}"/>
+                <custom:CutCorner BorderCuts="0,0,1,0" Grid.Column="3" Margin="10">
+                    <RadioButton BorderThickness="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" GroupName="creationSteps" Style="{DynamicResource ExpanseToggleButton}" Content="Professions" Command="{Binding NavigateToCharacterProfessions}" />
                 </custom:CutCorner>
-                <Rectangle Height="30" Fill="{StaticResource EXPLightBlueBrush}" Width="5"/>
-                <custom:CutCorner BorderCuts="0,1,0,0" >
-                    <Button Content="Drive and Goals" Command="{Binding NavigateToDriveAndGoals}"/>
+                <custom:CutCorner BorderCuts="0,0,0,1" Grid.Column="4" Margin="10">
+                    <RadioButton BorderThickness="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" GroupName="creationSteps" Style="{DynamicResource ExpanseToggleButton}" Content="Drive and Goals" Command="{Binding NavigateToDriveAndGoals}" />
                 </custom:CutCorner>
-                <Rectangle Height="30" Fill="{StaticResource EXPLightBlueBrush}" Width="5"/>
-                <custom:CutCorner BorderCuts="0,1,0,0">
-                    <Button Content="Save, and back to main" />
+                <custom:CutCorner BorderCuts="0,1,1,0"  Grid.Column="5" Margin="10">
+                    <RadioButton BorderThickness="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" GroupName="creationSteps" Style="{DynamicResource ExpanseToggleButton}" Content="Save, and back to main" />
                 </custom:CutCorner>
-            </StackPanel>
-            <Grid VerticalAlignment="Bottom" Grid.Row="1">
+            <!--</ListBox>-->
+            </Grid>
+            
+            <Grid VerticalAlignment="Center" Grid.Row="3">
                 <Grid.RowDefinitions>
                     <RowDefinition/>
                     <RowDefinition/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <custom:CutCorner BorderCuts="1,1,1,1" BorderThickness="1" Grid.Row="0" Margin="5">
-                    <Button Content="Focuses" />
+                    <Button Content="Focuses"/>
                 </custom:CutCorner>
                 <custom:CutCorner BorderCuts="1,1,1,1" BorderThickness="1" Grid.Row="1" Margin="5">
-                    <Button Content="Talents" />
+                    <Button Content="Talents" Command="{Binding ShowTalentListCommand}"/>
                 </custom:CutCorner>
                 <custom:CutCorner BorderCuts="1,1,1,1" BorderThickness="1" Grid.Row="2" Margin="5">
                     <Button Content="Back to main" 
@@ -88,8 +97,8 @@
             </Grid>
 
 
-            <ContentControl Content="{Binding CurrentInnerViewModel}" Grid.Column="1" Grid.Row="1" >
-                
+            <ContentControl Content="{Binding CurrentInnerViewModel}" Grid.Row="2" Margin="5">
+
             </ContentControl>
         </Grid>
     </Border>
