--- a/Core/MVVM/View/GmMainWindow.xaml
+++ b/Core/MVVM/View/GmMainWindow.xaml
@@ -10,61 +10,8 @@
         mc:Ignorable="d"
         Style="{StaticResource ExpanseWindowStyle}"
         Title="GmMainWindow" Height="450" Width="800">
-    <Window.Resources>
-        <conv:OriginToImageConverter x:Key="OriginToImageConverter"/>
-        <ObjectDataProvider x:Key="CharacterOriginDataSource"
-                        ObjectType="{x:Type enum:CharacterOrigin}"
-                        MethodName="GetValues">
-            <ObjectDataProvider.MethodParameters>
-                <x:Type TypeName="enum:CharacterOrigin" />
-            </ObjectDataProvider.MethodParameters>
-        </ObjectDataProvider>
-
-    </Window.Resources>
+   
     <Grid>
-        <ListBox ItemsSource="{Binding Source={StaticResource CharacterOriginDataSource}}" SelectionMode="Single">
-
-            <ListBox.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <VirtualizingStackPanel IsItemsHost="True" Orientation="Horizontal"/>
-                </ItemsPanelTemplate>
-            </ListBox.ItemsPanel>
-
-            <ListBox.ItemContainerStyle>
-                <Style TargetType="{x:Type ListBoxItem}">
-                    <Setter Property="Template">
-                        <Setter.Value>
-                            <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                                <Border x:Name="contentborder" BorderBrush="#FFFFFF00" BorderThickness="0">
-                                    <StackPanel>
-                                        <Image x:Name="ListboxImage" Height="480">
-                                            <Image.Source>
-                                                <FormatConvertedBitmap Source="{Binding Converter={StaticResource OriginToImageConverter}}" DestinationFormat="Gray8"/>
-                                            </Image.Source>
-                                        </Image>
-                                        <custom:CutCorner HasShadow="0" BorderCuts="0,0,0,0" CutSize="4" Fill="#FF0B5879" >
-                                            <Label Content="{Binding}" Height="20" Padding="0" Background="Transparent" VerticalAlignment="Center"
-                                                   HorizontalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"
-                                                   Foreground="#FF72FBFF"/>
-                                        </custom:CutCorner>
-                                    </StackPanel>
-                                </Border>
-                                <ControlTemplate.Triggers>
-                                    <Trigger Property="IsSelected" Value="True">
-                                        <Setter TargetName="ListboxImage" Property="Source" Value="{Binding Converter={StaticResource OriginToImageConverter}}"/>
-                                        <Setter TargetName="contentborder" Property="BorderThickness" Value="1"/>
-                                    </Trigger>
-                                    <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="Source" TargetName="ListboxImage" Value="{Binding Converter={StaticResource OriginToImageConverter}}"/>
-                                    </Trigger>
-
-
-                                </ControlTemplate.Triggers>
-                            </ControlTemplate>
-                        </Setter.Value>
-                    </Setter>
-                </Style>
-            </ListBox.ItemContainerStyle>
-        </ListBox>
+        <ComboBox></ComboBox>
     </Grid>
 </Window>
